# datafileclient

./: .env.example  Dockerfile  README.md  a.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
src/sensory_data_client/: __init__.py  cli.py  client.py  config.py  exceptions.py  init.py  logging.py
src/sensory_data_client/db/: __init__.py  base.py  documentImage_orm.py  documentLine_orm.py  document_orm.py  document_permissions.py  groups.py  storage_orm.py  triggers.py  uow.py  user_group_membership.py  users.py
src/sensory_data_client/db/billing/: payment_orm.py  plan_orm.py  subscription_orm.py
src/sensory_data_client/db/documents/: audioLine_orm.py  documentImage_orm.py  documentLine_orm.py  document_orm.py  document_permissions.py  storage_orm.py
src/sensory_data_client/db/documents/lines/: audioLine_orm.py  documentLine_orm.py  imageLine_orm.py  rawline_orm.py
src/sensory_data_client/db/tags/: autotag_task_orm.py  document_tag_orm.py  tag_orm.py
src/sensory_data_client/db/users/: groups.py  user_group_membership.py  users.py
src/sensory_data_client/models/: __init__.py  audio.py  document.py  group.py  line.py
src/sensory_data_client/repositories/: __init__.py  es_repository.py  minio_repository.py  pg_repository.py  pg_repositoryAudioMeta.py  pg_repositoryBilling.py  pg_repositoryGroup.py  pg_repositoryImage.py  pg_repositoryLine.py  pg_repositoryMeta.py  pg_repositoryObj.py  pg_repositoryPermission.py  pg_repositoryTag.py  pg_repositoryUser.py
src/sensory_data_client/repositories/auth/: pg_repositoryBilling.py  pg_repositoryGroup.py  pg_repositoryPermission.py  pg_repositoryUser.py
src/sensory_data_client/repositories/lines_repo/: pg_repositoryAudio.py  pg_repositoryDoc.py  pg_repositoryImage.py  pg_repositoryLine.py
src/sensory_data_client/repositories/tags/: pg_repositoryTag.py  pg_repository_autotag.py
src/sensory_data_client/server/: auth.py  main.py
src/sensory_data_client/utils/: cli_utils.py  minio_async.py
tests/: conftest.py  markdown_to_graph.py  test_cli.py  test_data_client.py  testtt.ipynb
